# kc-moe

./: .gitignore  .gitmodules  README.md  add_missing_tokens.py  bench-mecab.ipynb  bench_dataset.ipynb  bench_dataset.py  dataset-loader.ipynb  how-to-train.md  metric.py  parquet-dataset-source.py  postprocessor.py  postprocessor_test.py  preprocessor.py  pyproject.toml  reproduce.py  tasks.py  test.ipynb  tpu-setup-v2.sh  tpu-setup.sh  train-example.sh  train_tokenizer.py
config/model/: kc_moe_base.gin  kc_moe_xl.gin
config/run/: base_eval.gin  base_hate_speech.gin  base_kornli.gin  base_korsts.gin  base_nsmc.gin  base_pretrain.gin  base_question_pair.gin  baseline.gin  finetune_default.gin  infer_default.gin  kc_moe_base_pretrain.gin  kc_moe_xl_pretrain.gin  kct5-base-pretrain.gin  kct5_base-pretrain.gin  xl_hate_speech.gin  xl_pretrain.gin
config/run/0_baseline/: pretrain.gin  pretrain_x10.gin
config/run/1_moe/: finetune_default.gin  infer_default.gin  pretrain.gin
config/run/kcmoe/: pretrain_base.gin  pretrain_xl.gin
config/run/test/: nsmc.gin  tfds_test.gin
config/run/test/nsmc/: infer.gin  (+1 more)
config/sentencepiece/: bpe.gin  morpheme_aware_bpe.gin  morpheme_aware_unigram.gin  test.gin  unigram.gin
config/task/: finetune_default.gin  finetune_nsmc.gin  hate_speech.gin  kcbert_cleaned.gin  khs_cleaned.gin  kornli.gin  korsts.gin  pretrain_default.gin  question_pair.gin
dataset/hate_speech/: __init__.py  hate_speech.py
dataset/hate_speech_test/: __init__.py  hate_speech_test.py
dataset/kcbert_cleaned/: __init__.py  kcbert_cleaned.py
dataset/khs_cleaned/: __init__.py  khs_cleaned.py
dataset/kornli/: __init__.py  kornli.py
dataset/korsts/: __init__.py  korsts.py
dataset/naver_ner/: __init__.py  naver_ner.py
dataset/nsmc/: __init__.py  nsmc.py
dataset/question_pair/: __init__.py  question_pair.py
dataset/tfds_test/: __init__.py  tfds_test.py
preprocessor/: __init__.py  retokenize.py
task/: tfds_test.py
tokenizer_util/: sentence_generator.py
vocab/: morpheme_aware_unigram_32k.100extra.model  morpheme_aware_unigram_32k.100extra.vocab  morpheme_aware_unigram_32k.model  morpheme_aware_unigram_32k.vocab  t5-vocab.txt  test.model
(+28 files in other folders)
